--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,19 @@
 # For Docker deployment, these variables should be passed as environment variables.
 
 # Jackett Configuration
- # Replace with your Jackett instance URL
-JACKETT_HOST=http://jackett:9117
+# Replace with your Jackett instance URL
+JACKETT_HOST=http://jackett:9117 
 
-# Replace with your Jackett API Key
-JACKETT_API_KEY=YOUR_JACKETT_API_KEY 
+ # Replace with your Jackett API Key
+JACKETT_API_KEY=YOUR_JACKETT_API_KEY
 
 # Optional: GitHub Raw URL for Best Trackers
+# Example:https://raw.githubusercontent.com/ngosang/trackerslist/refs/heads/master/trackers_best.txt
 # Example: https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt
-TRACKER_GITHUB_URL=https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt
+TRACKER_GITHUB_URL=
+
+# Optional: API Keys for Metadata Resolution
+# Get a TMDb API key from https://www.themoviedb.org/settings/api
+TMDB_API_KEY=
+# Get an OMDb API key from http://www.omdbapi.com/apikey.aspx
+OMDB_API_KEY=
