--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stremio-jackett-addon",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Stremio addon to search Jackett for direct torrents.",
   "main": "server.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "cors": "^2.8.5"  // Added cors dependency
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
