--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "xml2js": "^0.6.2",
-    "cors": "^2.8.5"  // Added cors dependency
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
