--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# .env.example
 # This file is for local development only.
 # For Docker deployment, these variables should be passed as environment variables.
 
@@ -9,7 +10,6 @@ JACKETT_HOST=http://jackett:9117
 JACKETT_API_KEY=YOUR_JACKETT_API_KEY
 
 # Optional: GitHub Raw URL for Best Trackers
-# Example:https://raw.githubusercontent.com/ngosang/trackerslist/refs/heads/master/trackers_best.txt
 # Example: https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt
 TRACKER_GITHUB_URL=
 
@@ -18,3 +18,8 @@ TRACKER_GITHUB_URL=
 TMDB_API_KEY=
 # Get an OMDb API key from http://www.omdbapi.com/apikey.aspx
 OMDB_API_KEY=
+
+# Optional: Logging Level
+# Set to 'debug', 'info', 'warn', or 'error'. Default is 'info'.
+# 'debug' is most verbose, 'error' is least verbose.
+LOG_LEVEL=info
